class Calendar {
    constructor(elementId) {
        this.calendar = null;
        this.elementId = elementId;
    }

    init() {
        // Initialize FullCalendar
        // ...
    }

    loadEvents() {
        // Load events from the server
        // ...
    }

    // Add other calendar-related methods
}

export default Calendar;
