class NotificationManager {
    static showNotification(message, type = 'info') {
        // Implementation from the existing showNotification function
        // ...
    }

    static createNotificationsContainer() {
        // Implementation from the existing createNotificationsContainer function
        // ...
    }
}

export default NotificationManager;